--- a/server/.env-template
+++ b/server/.env-template
@@ -1,4 +1,4 @@
-MYSQL_HOST=?
-MYSQL_USER=?
-MYSQL_PASSWORD=?
-MYSQL_DB=?
+MYSQL_HOST=localhost
+MYSQL_USER=gatcha_backend
+MYSQL_PASSWORD=prova
+MYSQL_DB=gatcha
