--- a/openapi_server/Dockerfile
+++ b/openapi_server/Dockerfile
@@ -16,7 +16,7 @@ COPY requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application
-COPY . .
+COPY . ./openapi_server
 
 EXPOSE 8080
 
