--- a/openapi_server/Dockerfile
+++ b/openapi_server/Dockerfile
@@ -1,12 +1,6 @@
 FROM python:3.9-slim
 
-# Install system dependencies required for mysqlclient
-RUN apt-get update && apt-get install -y \
-    pkg-config \
-    default-libmysqlclient-dev \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
+# Setting current workdir
 WORKDIR /usr/src/app
 
 # Copy requirements first to leverage Docker cache
