--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     ports:
       - "127.0.0.1:8080:8080"
     env_file: "openapi_server/api.env"
+    volumes:
+      - ./openapi_server:/usr/src/app/openapi_server
     depends_on:
       db:
         condition: service_healthy
