--- a/api_gateway/api_gateway.conf
+++ b/api_gateway/api_gateway.conf
@@ -110,6 +110,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+        location /favicon.ico {
+            root /usr/share/nginx/html;
+        }
     }
 }
 
