--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,3 +1,4 @@
 FROM mysql:9.1.0
 
-COPY ./init.sql /docker-entrypoint-initdb.d
+COPY ./init.sql /docker-entrypoint-initdb.d/
+COPY ./mock_data.sql /docker-entrypoint-initdb.d/
