--- a/api_gateway/api_gateway.conf
+++ b/api_gateway/api_gateway.conf
@@ -1,117 +1,117 @@
 http {
-    upstream service_auth {
-        server service_auth:3001;
+    upstream service_admin {
+        server service_admin:8080;
     }
 
     upstream service_auctions {
-        server service_auctions:3002;
+        server service_auctions:8080;
+    }
+
+    upstream service_auth {
+        server service_auth:8080;
     }
 
     upstream service_currency {
-        server service_currency:3003;
-    }
-
-    upstream service_admin {
-        server service_admin:3004;
+        server service_currency:8080;
     }
 
     upstream service_feedback {
-        server service_feedback:3005;
+        server service_feedback:8080;
     }
 
     upstream service_gacha {
-        server service_gacha:3006;
+        server service_gacha:8080;
     }
 
     upstream service_inventory {
-        server service_inventory:3007;
+        server service_inventory:8080;
     }
 
     upstream service_profile {
-        server service_profile:3008;
+        server service_profile:8080;
     }
 
     upstream service_pvp {
-        server service_pvp:3009;
+        server service_pvp:8080;
     }
 
 
     server {
         listen 8080;
 
-        location /auth/ {
-            proxy_pass http://service_auth/;
+        location ^~ /auth/ {
+            proxy_pass http://service_auth/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /auctions/ {
-            proxy_pass http://service_auctions/;
+        location ^~ /auctions/ {
+            proxy_pass http://service_auctions/auctions/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /currency/ {
-            proxy_pass http://service_currency/;
+        location ^~ /currency/ {
+            proxy_pass http://service_currency/currency/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /admin/ {
-            proxy_pass http://service_admin/;
+        location ^~ /admin/ {
+            proxy_pass http://service_admin/admin/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /feedback/ {
-            proxy_pass http://service_feedback/;
+        location ^~ /feedback/ {
+            proxy_pass http://service_feedback/feedback/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /gacha/ {
-            proxy_pass http://service_gacha/;
+        location ^~ /gacha/ {
+            proxy_pass http://service_gacha/gacha/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /inventory/ {
-            proxy_pass http://service_inventory/;
+        location ^~ /inventory/ {
+            proxy_pass http://service_inventory/inventory/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /profile/ {
-            proxy_pass http://service_profile/;
+        location ^~ /profile/ {
+            proxy_pass http://service_profile/profile/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /pvp/ {
-            proxy_pass http://service_pvp/;
+        location ^~ /pvp/ {
+            proxy_pass http://service_pvp/pvp/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /favicon.ico {
+        location ^~ /favicon.ico {
             root /usr/share/nginx/html;
         }
     }
