--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       interval: 3s
       retries: 20
       start_period: 5s
+    restart: always
     networks:
       - backend_gachaandgames_network
 
@@ -51,6 +52,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -74,6 +76,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -97,6 +100,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -120,6 +124,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -143,6 +148,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -166,6 +172,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -189,6 +196,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -212,6 +220,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
@@ -235,6 +244,7 @@ services:
       db:
         condition: service_healthy
     tty: true
+    restart: always
     networks:
       - backend_gachaandgames_network
     healthcheck:
