--- a/api_gateway/api_gateway.conf
+++ b/api_gateway/api_gateway.conf
@@ -1,43 +1,71 @@
+# Nginx Configuration File: nginx.conf
+
+events {}
+
 http {
-    upstream service_admin {
-        server service_admin:8080;
+    upstream service_profile {
+        least_conn;  # Usa la strategia "least_conn" per inviare richieste alla replica con meno connessioni attive
+        server service_profile:8080 max_fails=3 fail_timeout=10s;  # Docker Compose gestisce tutte le repliche con lo stesso nome
     }
 
-    upstream service_auctions {
-        server service_auctions:8080;
+    upstream service_admin {
+        least_conn;
+        server service_admin:8080 max_fails=3 fail_timeout=10s;
     }
 
     upstream service_auth {
-        server service_auth:8080;
+        least_conn;
+        server service_auth:8080 max_fails=3 fail_timeout=10s;
+    }
+
+    upstream service_auctions {
+        least_conn;
+        server service_auctions:8080 max_fails=3 fail_timeout=10s;
     }
 
     upstream service_currency {
-        server service_currency:8080;
+        least_conn;
+        server service_currency:8080 max_fails=3 fail_timeout=10s;
     }
 
     upstream service_feedback {
-        server service_feedback:8080;
+        least_conn;
+        server service_feedback:8080 max_fails=3 fail_timeout=10s;
     }
 
     upstream service_gacha {
-        server service_gacha:8080;
+        least_conn;
+        server service_gacha:8080 max_fails=3 fail_timeout=10s;
     }
 
     upstream service_inventory {
-        server service_inventory:8080;
-    }
-
-    upstream service_profile {
-        server service_profile:8080;
+        least_conn;
+        server service_inventory:8080 max_fails=3 fail_timeout=10s;
     }
 
     upstream service_pvp {
-        server service_pvp:8080;
+        least_conn;
+        server service_pvp:8080 max_fails=3 fail_timeout=10s;
     }
-
 
     server {
         listen 8080;
+
+        location ^~ /profile/ {
+            proxy_pass http://service_profile/profile/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ^~ /admin/ {
+            proxy_pass http://service_admin/admin/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         location ^~ /auth/ {
             proxy_pass http://service_auth/auth/;
@@ -57,14 +85,6 @@ http {
 
         location ^~ /currency/ {
             proxy_pass http://service_currency/currency/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location ^~ /admin/ {
-            proxy_pass http://service_admin/admin/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -95,14 +115,6 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ^~ /profile/ {
-            proxy_pass http://service_profile/profile/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
         location ^~ /pvp/ {
             proxy_pass http://service_pvp/pvp/;
             proxy_set_header Host $host;
@@ -116,5 +128,3 @@ http {
         }
     }
 }
-
-events {}
