chores: added health checks and comments to openapi main specs

--- a/gachaandgames_complete.yaml
+++ b/gachaandgames_complete.yaml
@@ -21,6 +21,16 @@ servers:
   - url: http://localhost:8080
     description: Local server
 paths:
+  /feedback/health_check:
+    get:
+      tags:
+      - feedback
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /feedback/:
     post:
       tags:
@@ -46,6 +56,22 @@ paths:
           description: Invalid query parameters.
         '500':
           description: Internal server error.
+
+
+
+  ############################################
+  ################ AUCTIONS ##################
+  ############################################
+  /auctions/health_check:
+    get:
+      tags:
+      - auctions
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /auctions/history:
     get:
       tags:
@@ -241,6 +267,22 @@ paths:
           description: Insufficient funds.
         '500':
           description: Internal server error.
+
+
+
+  ############################################
+  #################### PVP ###################
+  ############################################
+  /pvp/health_check:
+    get:
+      tags:
+      - pvp
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /pvp/sendPvPRequest/{user_uuid}:
     post:
       tags:
@@ -393,6 +435,22 @@ paths:
           description: Invalid match id.
         '500':
           description: Internal server error.
+
+
+
+  ############################################
+  ################ INVENTORY #################
+  ############################################
+  /inventory/health_check:
+    get:
+      tags:
+      - inventory
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /inventory:
     get:
       tags:
@@ -454,6 +512,51 @@ paths:
           description: Item not found.
         '500':
           description: Internal server error
+  /inventory/{inventory_item_id}:
+    get:
+      tags:
+        - inventory
+      summary: Shows infos on my inventory item.
+      description: Returns infos on my inventory item.
+      operationId: getInventoryItemInfo
+      parameters:
+        - name: session
+          in: cookie
+          required: true
+          schema:
+            type: string
+        - name: inventory_item_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/ItemId'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/InventoryItem'
+        '500':
+          description: Internal server error
+
+
+
+  ############################################
+  ################## GACHA ###################
+  ############################################
+  /gacha/health_check:
+    get:
+      tags:
+      - gacha
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /gacha/pull/{pool_id}:
     post:
       tags:
@@ -485,35 +588,6 @@ paths:
           description: Insufficient funds.
         '500':
           description: Internal server error.
-  /inventory/{inventory_item_id}:
-    get:
-      tags:
-        - inventory
-      summary: Shows infos on my inventory item.
-      description: Returns infos on my inventory item.
-      operationId: getInventoryItemInfo
-      parameters:
-        - name: session
-          in: cookie
-          required: true
-          schema:
-            type: string
-        - name: inventory_item_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/ItemId'
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/InventoryItem'
-        '500':
-          description: Internal server error
   /gacha/{gacha_uuid}:
     get:
       tags:
@@ -584,6 +658,22 @@ paths:
                   $ref: '#/components/schemas/Pool'
         '500':
           description: Internal server error
+
+
+
+  ############################################
+  ################# CURRENCY #################
+  ############################################
+  /currency/health_check:
+    get:
+      tags:
+      - currency
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /currency/bundles:
     get:
       tags:
@@ -627,6 +717,22 @@ paths:
           description: Purchase failed.
         '500':
           description: Internal server error.
+
+
+
+  ############################################
+  ################# PROFILE ##################
+  ############################################
+  /profile/health_check:
+    get:
+      tags:
+      - profile
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /profile/{uuid}/info:
     get:
       tags:
@@ -718,6 +824,22 @@ paths:
           description: Not logged in.
         '500':
           description: Internal server error.
+
+
+
+  ############################################
+  ################### AUTH ###################
+  ############################################
+  /auth/health_check:
+    get:
+      tags:
+      - auth
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /auth/login:
     post:
       tags:
@@ -809,6 +931,22 @@ paths:
           description: The provided email address is already in use.
         '500':
           description: Internal server error.
+
+
+
+  ############################################
+  ################### ADMIN ##################
+  ############################################
+  /admin/health_check:
+    get:
+      tags:
+      - admin
+      description: Returns 200 if service is healthy.
+      operationId: health_check
+      responses:
+        "200":
+          description: Service OK
+      summary: Gives information on service status.
   /admin/profile/list/:
     get:
       tags:
